--- a/Ricky+Morty/Ricky+Morty/Base.lproj/Main.storyboard
+++ b/Ricky+Morty/Ricky+Morty/Base.lproj/Main.storyboard
@@ -18,8 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="EYK-mZ-6NF">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" bouncesZoom="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="EYK-mZ-6NF">
+                                <rect key="frame" x="0.0" y="107" width="414" height="755"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Xg9-TG-c3b">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -37,23 +37,39 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="k5f-BM-lqN">
+                                <rect key="frame" x="16" y="60" width="382" height="32"/>
+                                <segments>
+                                    <segment title="All"/>
+                                    <segment title="Alive"/>
+                                    <segment title="Dead"/>
+                                    <segment title="Unknown"/>
+                                </segments>
+                                <connections>
+                                    <action selector="onFilterChanged" destination="BYZ-38-t0r" eventType="valueChanged" id="t4D-wj-4nx"/>
+                                </connections>
+                            </segmentedControl>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="BackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="k5f-BM-lqN" secondAttribute="trailing" constant="16" id="3Ki-cb-otP"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="EYK-mZ-6NF" secondAttribute="bottom" id="5b2-4W-juS"/>
+                            <constraint firstItem="EYK-mZ-6NF" firstAttribute="top" secondItem="k5f-BM-lqN" secondAttribute="bottom" constant="16" id="6bE-5c-SYO"/>
                             <constraint firstItem="EYK-mZ-6NF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="EHm-an-tEL"/>
-                            <constraint firstItem="EYK-mZ-6NF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="bjT-ZK-OKe"/>
+                            <constraint firstItem="k5f-BM-lqN" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="Pag-Mw-tEZ"/>
+                            <constraint firstItem="k5f-BM-lqN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="Tes-oa-bJe"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EYK-mZ-6NF" secondAttribute="trailing" id="xWl-Dl-brE"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="EYK-mZ-6NF" id="5mF-F5-wyz"/>
+                        <outlet property="filterControl" destination="k5f-BM-lqN" id="2Q7-kD-5wu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-861" y="-56"/>
+            <point key="canvasLocation" x="-1500" y="-59"/>
         </scene>
         <!--EpisodesViewController-->
         <scene sceneID="gxZ-eE-b9w">
