--- a/Ricky+Morty/Ricky+Morty/CustomViews/Cells/CharacterCollectionViewCell.xib
+++ b/Ricky+Morty/Ricky+Morty/CustomViews/Cells/CharacterCollectionViewCell.xib
@@ -12,44 +12,44 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CharacterCell" id="gTV-IL-0wX" customClass="CharacterCollectionViewCell" customModule="Ricky_Morty" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="333" height="310"/>
+            <rect key="frame" x="0.0" y="0.0" width="330" height="339"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="333" height="310"/>
+                <rect key="frame" x="0.0" y="0.0" width="330" height="339"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XzM-tH-Ptc" customClass="CustomView" customModule="Ricky_Morty" customModuleProvider="target">
-                        <rect key="frame" x="41.5" y="60.5" width="250" height="189"/>
+                        <rect key="frame" x="16" y="16" width="298" height="307"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="dUl-0Y-ApS" customClass="RoundImageView" customModule="Ricky_Morty" customModuleProvider="target">
-                                <rect key="frame" x="85" y="16" width="80" height="80"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="dUl-0Y-ApS" secondAttribute="height" multiplier="1:1" id="PdH-v2-WgE"/>
-                                    <constraint firstAttribute="width" constant="80" id="YLT-xZ-lPN"/>
-                                </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="40"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="p4S-p5-A38">
-                                <rect key="frame" x="106.5" y="112" width="37.5" height="61"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="p4S-p5-A38">
+                                <rect key="frame" x="109" y="80" width="80" height="147"/>
                                 <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="dUl-0Y-ApS" customClass="RoundImageView" customModule="Ricky_Morty" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="dUl-0Y-ApS" secondAttribute="height" multiplier="1:1" id="PdH-v2-WgE"/>
+                                            <constraint firstAttribute="width" constant="80" id="YLT-xZ-lPN"/>
+                                        </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="40"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RSl-Ir-mIU">
-                                        <rect key="frame" x="0.0" y="0.0" width="37.5" height="17"/>
+                                        <rect key="frame" x="21.5" y="86" width="37.5" height="17"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Srd-xJ-fbP">
-                                        <rect key="frame" x="0.0" y="23" width="37.5" height="16"/>
+                                        <rect key="frame" x="23.5" y="109" width="33" height="16"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <color key="textColor" systemColor="secondaryLabelColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Of-k1-ep0">
-                                        <rect key="frame" x="0.0" y="45" width="37.5" height="16"/>
+                                        <rect key="frame" x="23.5" y="131" width="33" height="16"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <color key="textColor" systemColor="secondaryLabelColor"/>
                                         <nil key="highlightedColor"/>
@@ -59,13 +59,11 @@
                         </subviews>
                         <color key="backgroundColor" name="CardColor"/>
                         <constraints>
-                            <constraint firstItem="p4S-p5-A38" firstAttribute="centerX" secondItem="dUl-0Y-ApS" secondAttribute="centerX" id="4r2-VG-dit"/>
-                            <constraint firstAttribute="width" constant="250" id="FyT-Kv-JJ0"/>
-                            <constraint firstItem="dUl-0Y-ApS" firstAttribute="centerX" secondItem="XzM-tH-Ptc" secondAttribute="centerX" id="Gu7-sr-hUQ"/>
-                            <constraint firstItem="p4S-p5-A38" firstAttribute="top" secondItem="dUl-0Y-ApS" secondAttribute="bottom" constant="16" id="Nfq-jg-a94"/>
-                            <constraint firstItem="dUl-0Y-ApS" firstAttribute="top" secondItem="XzM-tH-Ptc" secondAttribute="top" constant="16" id="Ud2-Y1-BOL"/>
+                            <constraint firstItem="p4S-p5-A38" firstAttribute="centerX" secondItem="XzM-tH-Ptc" secondAttribute="centerX" id="LFH-H3-Xup"/>
+                            <constraint firstItem="p4S-p5-A38" firstAttribute="centerY" secondItem="XzM-tH-Ptc" secondAttribute="centerY" id="PLi-jd-e3U"/>
+                            <constraint firstItem="p4S-p5-A38" firstAttribute="top" relation="greaterThanOrEqual" secondItem="XzM-tH-Ptc" secondAttribute="top" constant="16" id="YvX-jL-jbO"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="p4S-p5-A38" secondAttribute="trailing" constant="16" id="bkL-lJ-xSr"/>
-                            <constraint firstAttribute="bottom" secondItem="p4S-p5-A38" secondAttribute="bottom" constant="16" id="fWs-7A-enn"/>
+                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="p4S-p5-A38" secondAttribute="bottom" constant="16" id="fWs-7A-enn"/>
                             <constraint firstItem="p4S-p5-A38" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="XzM-tH-Ptc" secondAttribute="leading" constant="16" id="ule-DV-bv0"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
@@ -91,21 +89,21 @@
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="XzM-tH-Ptc" secondAttribute="bottom" constant="16" id="DxX-MK-c3T"/>
-                <constraint firstItem="XzM-tH-Ptc" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="IXk-t9-CvU"/>
-                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="XzM-tH-Ptc" secondAttribute="trailing" constant="16" id="REi-bG-MeY"/>
+                <constraint firstAttribute="bottom" secondItem="XzM-tH-Ptc" secondAttribute="bottom" constant="16" id="DxX-MK-c3T"/>
+                <constraint firstItem="XzM-tH-Ptc" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="IXk-t9-CvU"/>
+                <constraint firstAttribute="trailing" secondItem="XzM-tH-Ptc" secondAttribute="trailing" constant="16" id="REi-bG-MeY"/>
                 <constraint firstItem="XzM-tH-Ptc" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="a2b-7M-FbR"/>
-                <constraint firstItem="XzM-tH-Ptc" firstAttribute="top" relation="greaterThanOrEqual" secondItem="gTV-IL-0wX" secondAttribute="top" constant="16" id="l0c-Dc-nF1"/>
+                <constraint firstItem="XzM-tH-Ptc" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="16" id="l0c-Dc-nF1"/>
                 <constraint firstItem="XzM-tH-Ptc" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="yeI-D0-2uA"/>
             </constraints>
-            <size key="customSize" width="333" height="310"/>
+            <size key="customSize" width="330" height="339"/>
             <connections>
                 <outlet property="image" destination="dUl-0Y-ApS" id="Zfq-GA-ZPk"/>
                 <outlet property="nameLabel" destination="RSl-Ir-mIU" id="JRf-85-61j"/>
                 <outlet property="originLabel" destination="Srd-xJ-fbP" id="fep-rb-qE8"/>
                 <outlet property="statusLabel" destination="3Of-k1-ep0" id="nFV-bF-WEX"/>
             </connections>
-            <point key="canvasLocation" x="-1141.304347826087" y="-329.46428571428572"/>
+            <point key="canvasLocation" x="-1256.521739130435" y="-338.50446428571428"/>
         </collectionViewCell>
     </objects>
     <resources>
@@ -114,7 +112,7 @@
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="ShadowColor">
-            <color red="0.32941176470588235" green="0.43137254901960786" blue="0.47843137254901963" alpha="0.60425728559494019" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.32941176470588235" green="0.43137254901960786" blue="0.47843137254901963" alpha="0.60399997234344482" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="secondaryLabelColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
