--- a/Ricky+Morty/Ricky+Morty/Base.lproj/Main.storyboard
+++ b/Ricky+Morty/Ricky+Morty/Base.lproj/Main.storyboard
@@ -18,8 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" bouncesZoom="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="EYK-mZ-6NF">
-                                <rect key="frame" x="0.0" y="107" width="414" height="755"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bouncesZoom="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="EYK-mZ-6NF">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Xg9-TG-c3b">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -38,13 +38,15 @@
                                 </cells>
                             </collectionView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="k5f-BM-lqN">
-                                <rect key="frame" x="16" y="60" width="382" height="32"/>
+                                <rect key="frame" x="15" y="825" width="384" height="32"/>
+                                <color key="backgroundColor" name="FilterColor"/>
                                 <segments>
                                     <segment title="All"/>
                                     <segment title="Alive"/>
                                     <segment title="Dead"/>
                                     <segment title="Unknown"/>
                                 </segments>
+                                <color key="tintColor" systemColor="linkColor"/>
                                 <connections>
                                     <action selector="onFilterChanged" destination="BYZ-38-t0r" eventType="valueChanged" id="t4D-wj-4nx"/>
                                 </connections>
@@ -53,12 +55,12 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="BackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="k5f-BM-lqN" secondAttribute="trailing" constant="16" id="3Ki-cb-otP"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="EYK-mZ-6NF" secondAttribute="bottom" id="5b2-4W-juS"/>
-                            <constraint firstItem="EYK-mZ-6NF" firstAttribute="top" secondItem="k5f-BM-lqN" secondAttribute="bottom" constant="16" id="6bE-5c-SYO"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="k5f-BM-lqN" secondAttribute="trailing" constant="15" id="3Ki-cb-otP"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="EYK-mZ-6NF" secondAttribute="bottom" id="651-DZ-lRy"/>
                             <constraint firstItem="EYK-mZ-6NF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="EHm-an-tEL"/>
-                            <constraint firstItem="k5f-BM-lqN" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="Pag-Mw-tEZ"/>
-                            <constraint firstItem="k5f-BM-lqN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="Tes-oa-bJe"/>
+                            <constraint firstItem="EYK-mZ-6NF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="JM2-CH-T9h"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="k5f-BM-lqN" secondAttribute="bottom" constant="6" id="LoD-Rx-Vnl"/>
+                            <constraint firstItem="k5f-BM-lqN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="Tes-oa-bJe"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EYK-mZ-6NF" secondAttribute="trailing" id="xWl-Dl-brE"/>
                         </constraints>
                     </view>
@@ -106,6 +108,12 @@
         <namedColor name="BackgroundColor">
             <color red="0.92549019607843142" green="0.93725490196078431" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="FilterColor">
+            <color red="0.50196078431372548" green="0.79607843137254897" blue="0.7686274509803922" alpha="0.95599999999999996" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
