--- a/Ricky+Morty/Ricky+Morty/Base.lproj/Main.storyboard
+++ b/Ricky+Morty/Ricky+Morty/Base.lproj/Main.storyboard
@@ -38,7 +38,7 @@
                                 </cells>
                             </collectionView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="k5f-BM-lqN">
-                                <rect key="frame" x="15" y="825" width="384" height="32"/>
+                                <rect key="frame" x="53.5" y="825" width="307" height="32"/>
                                 <color key="backgroundColor" name="FilterColor"/>
                                 <segments>
                                     <segment title="All"/>
@@ -55,12 +55,13 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="BackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="k5f-BM-lqN" secondAttribute="trailing" constant="15" id="3Ki-cb-otP"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="k5f-BM-lqN" secondAttribute="trailing" constant="15" id="3Ki-cb-otP"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="EYK-mZ-6NF" secondAttribute="bottom" id="651-DZ-lRy"/>
                             <constraint firstItem="EYK-mZ-6NF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="EHm-an-tEL"/>
                             <constraint firstItem="EYK-mZ-6NF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="JM2-CH-T9h"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="k5f-BM-lqN" secondAttribute="bottom" constant="6" id="LoD-Rx-Vnl"/>
-                            <constraint firstItem="k5f-BM-lqN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="Tes-oa-bJe"/>
+                            <constraint firstItem="k5f-BM-lqN" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="Tes-oa-bJe"/>
+                            <constraint firstItem="k5f-BM-lqN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qPG-NT-ZHt"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EYK-mZ-6NF" secondAttribute="trailing" id="xWl-Dl-brE"/>
                         </constraints>
                     </view>
@@ -109,7 +110,7 @@
             <color red="0.92549019607843142" green="0.93725490196078431" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="FilterColor">
-            <color red="0.50196078431372548" green="0.79607843137254897" blue="0.7686274509803922" alpha="0.95599999999999996" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.50196078431372548" green="0.79607843137254897" blue="0.7686274509803922" alpha="0.90000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="linkColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
